# genai-fantasy-farm

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
agents/: backend_tester.md
backend/: README.md  pyproject.toml
backend/scripts/: test_character_init.py  test_event_generator.py
backend/src/farm_village_sim/: __init__.py
backend/src/farm_village_sim/api/routers/: characters.py
backend/src/farm_village_sim/api/services/: character_service.py  event_service.py
backend/src/farm_village_sim/characters/: initializer.py  prompts.py
backend/src/farm_village_sim/events/: __init__.py  models.py  prompts.py
backend/src/farm_village_sim/llm/: __init__.py  providers.py
backend/src/farm_village_sim/ui/: __init__.py
backend/tests/: __init__.py
frontend/: CLAUDE.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CharacterPortrait.tsx  CharacterPreview.tsx  SpeechBubble.tsx  TurnDisplay.tsx  WizardStep.tsx
frontend/src/hooks/: useCharacters.ts  useCreateCharacter.ts  useEvents.ts
frontend/src/pages/: Characters.tsx  CreateCharacter.tsx  CreateEvent.tsx  Dashboard.tsx  EventViewer.tsx  Events.tsx  Landing.tsx
frontend/src/types/: character.ts  event.ts
scripts/: test_random_event.sh
src/farm_village_sim/api/: __init__.py  main.py
src/farm_village_sim/api/routers/: events.py
src/farm_village_sim/api/services/: character_service.py
src/farm_village_sim/characters/: __init__.py  initializer.py  models.py
src/farm_village_sim/core/: __init__.py
src/farm_village_sim/events/: graph.py
src/farm_village_sim/llm/: providers.py
src/farm_village_sim/world/: __init__.py
